--- a/crimea/localisation/crimea_countries_l_english.yml
+++ b/crimea/localisation/crimea_countries_l_english.yml
@@ -12,3 +12,16 @@
  CRI_neutrality_DEF:0 "Crimea"
  CRI_neutrality_ADJ:0 "Crimean"
 
+ WAS_democratic:0 "Republic of Wasteland"
+ WAS_democratic_DEF:0 "Republic of Wasteland"
+ WAS_democratic_ADJ:0 "Wasteland"
+ WAS_communism:0 "People's Republic of Wasteland"
+ WAS_communism_DEF:0 "People's Republic of Wasteland"
+ WAS_communism_ADJ:0 "Wasteland"
+ WAS_fascism:0 "Wasteland Empire"
+ WAS_fascism_DEF:0 "Wasteland Empire"
+ WAS_fascism_ADJ:0 "Wasteland"
+ WAS_neutrality:0 "Wasteland"
+ WAS_neutrality_DEF:0 "Wasteland"
+ WAS_neutrality_ADJ:0 "Wasteland"
+
