--- a/crimea/localisation/crimea_countries_l_english.yml
+++ b/crimea/localisation/crimea_countries_l_english.yml
@@ -25,3 +25,81 @@
  WAS_neutrality_DEF:0 "Wasteland"
  WAS_neutrality_ADJ:0 "Wasteland"
 
+ BAL_democratic:0 "Republic of Baltic Empire"
+ BAL_democratic_DEF:0 "Republic of Baltic Empire"
+ BAL_democratic_ADJ:0 "Baltic"
+ BAL_communism:0 "People's Republic of Baltic Empire"
+ BAL_communism_DEF:0 "People's Republic of Baltic Empire"
+ BAL_communism_ADJ:0 "Baltic"
+ BAL_fascism:0 "Baltic Empire"
+ BAL_fascism_DEF:0 "Baltic Empire"
+ BAL_fascism_ADJ:0 "Baltic"
+ BAL_neutrality:0 "Baltic Empire"
+ BAL_neutrality_DEF:0 "Baltic Empire"
+ BAL_neutrality_ADJ:0 "Baltic"
+
+ BLK_democratic:0 "United Balkan Federation"
+ BLK_democratic_DEF:0 "United Balkan Federation"
+ BLK_democratic_ADJ:0 "Baltic"
+ BLK_communism:0 "People's Republic of United Balkan"
+ BLK_communism_DEF:0 "People's Republic of United Balkan"
+ BLK_communism_ADJ:0 "Baltic"
+ BLK_fascism:0 "Baltic Empire"
+ BLK_fascism_DEF:0 "Baltic Empire"
+ BLK_fascism_ADJ:0 "Baltic"
+ BLK_neutrality:0 "United Balkan"
+ BLK_neutrality_DEF:0 "United Balkan"
+ BLK_neutrality_ADJ:0 "Baltic"
+
+ WES_democratic:0 "Republic of Wessex"
+ WES_democratic_DEF:0 "Republic of Wessex"
+ WES_democratic_ADJ:0 "Wessexian"
+ WES_communism:0 "People's Republic of Wessex"
+ WES_communism_DEF:0 "People's Republic of Wessex"
+ WES_communism_ADJ:0 "Wessexian"
+ WES_fascism:0 "Wessexian Empire"
+ WES_fascism_DEF:0 "Wessexian Empire"
+ WES_fascism_ADJ:0 "Wessexian"
+ WES_neutrality:0 "Wessex"
+ WES_neutrality_DEF:0 "Wessex"
+ WES_neutrality_ADJ:0 "Wessexian"
+
+ WFR_democratic:0 "West Francian Kingdom"
+ WFR_democratic_DEF:0 "West Francian Kingdom"
+ WFR_democratic_ADJ:0 "Franc"
+ WFR_communism:0 "People's Republic of West Francia"
+ WFR_communism_DEF:0 "People's Republic of West Francia"
+ WFR_communism_ADJ:0 "Franc"
+ WFR_fascism:0 "Franc Empire"
+ WFR_fascism_DEF:0 "Franc Empire"
+ WFR_fascism_ADJ:0 "Franc"
+ WFR_neutrality:0 "West Francia"
+ WFR_neutrality_DEF:0 "West Francia"
+ WFR_neutrality_ADJ:0 "Franc"
+
+ TRA_democratic:0 "Republic of Transnistia"
+ TRA_democratic_DEF:0 "Republic of Transnistia"
+ TRA_democratic_ADJ:0 "Tranistian"
+ TRA_communism:0 "People's Republic of Transnistia"
+ TRA_communism_DEF:0 "People's Republic of Transnistia"
+ TRA_communism_ADJ:0 "Tranistian"
+ TRA_fascism:0 "Tranistian Empire"
+ TRA_fascism_DEF:0 "Tranistian Empire"
+ TRA_fascism_ADJ:0 "Tranistian"
+ TRA_neutrality:0 "Transnistia"
+ TRA_neutrality_DEF:0 "Transnistia"
+ TRA_neutrality_ADJ:0 "Tranistian"
+
+ CYP_democratic:0 "Republic of Cyprus"
+ CYP_democratic_DEF:0 "Republic of Cyprus"
+ CYP_democratic_ADJ:0 "Cyprusian"
+ CYP_communism:0 "People's Republic of Cyprus"
+ CYP_communism_DEF:0 "People's Republic of Cyprus"
+ CYP_communism_ADJ:0 "Cyprusian"
+ CYP_fascism:0 "Cyprusian Empire"
+ CYP_fascism_DEF:0 "Cyprusian Empire"
+ CYP_fascism_ADJ:0 "Cyprusian"
+ CYP_neutrality:0 "Cyprus"
+ CYP_neutrality_DEF:0 "Cyprus"
+ CYP_neutrality_ADJ:0 "Cyprusian"
+
