--- a/crimea/localisation/crimea_countries_l_english.yml
+++ b/crimea/localisation/crimea_countries_l_english.yml
@@ -103,3 +103,172 @@
  CYP_neutrality_DEF:0 "Cyprus"
  CYP_neutrality_ADJ:0 "Cyprusian"
 
+ PER_democratic:0 "Republic of Persia"
+ PER_democratic_DEF:0 "Republic of Persia"
+ PER_democratic_ADJ:0 "Persia"
+ PER_communism:0 "People's Republic of Persia"
+ PER_communism_DEF:0 "People's Republic of Persia"
+ PER_communism_ADJ:0 "Persia"
+ PER_fascism:0 "Persian Empire"
+ PER_fascism_DEF:0 "Persian Empire"
+ PER_fascism_ADJ:0 "Persia"
+ PER_neutrality:0 "Persia"
+ PER_neutrality_DEF:0 "Persia"
+ PER_neutrality_ADJ:0 "Persia"
+
+ EGY_democratic:0 "Egyptian Province"
+ EGY_democratic_DEF:0 "Egyptian Province"
+ EGY_democratic_ADJ:0 "Egyptian"
+ EGY_communism:0 "People's Republic of Egypt"
+ EGY_communism_DEF:0 "People's Republic of Egypt"
+ EGY_communism_ADJ:0 "Egyptian"
+ EGY_fascism:0 "Egyptian Empire"
+ EGY_fascism_DEF:0 "Egyptian Empire"
+ EGY_fascism_ADJ:0 "Egyptian"
+ EGY_neutrality:0 "Egypt"
+ EGY_neutrality_DEF:0 "Egypt"
+ EGY_neutrality_ADJ:0 "Egyptian"
+
+ TRC_democratic:0 "Republic of Transcaucacia"
+ TRC_democratic_DEF:0 "Republic of Transcaucacia"
+ TRC_democratic_ADJ:0 "Transcaucacian"
+ TRC_communism:0 "People's Republic of Transcaucacia"
+ TRC_communism_DEF:0 "People's Republic of Transcaucacia"
+ TRC_communism_ADJ:0 "Transcaucacian"
+ TRC_fascism:0 "Transcaucacian Empire"
+ TRC_fascism_DEF:0 "Transcaucacian Empire"
+ TRC_fascism_ADJ:0 "Transcaucacian"
+ TRC_neutrality:0 "Transcaucacia"
+ TRC_neutrality_DEF:0 "Transcaucacia"
+ TRC_neutrality_ADJ:0 "Transcaucacian"
+
+ GRE_democratic:0 "Republic of Greece"
+ GRE_democratic_DEF:0 "Republic of Greece"
+ GRE_democratic_ADJ:0 "Greek"
+ GRE_communism:0 "People's Republic of Greece"
+ GRE_communism_DEF:0 "People's Republic of Greece"
+ GRE_communism_ADJ:0 "Greek"
+ GRE_fascism:0 "Macedon"
+ GRE_fascism_DEF:0 "Macedon"
+ GRE_fascism_ADJ:0 "Greek"
+ GRE_neutrality:0 "Greece"
+ GRE_neutrality_DEF:0 "Greece"
+ GRE_neutrality_ADJ:0 "Greek"
+
+ AUS_democratic:0 "Republic of Austria"
+ AUS_democratic_DEF:0 "Republic of Austria"
+ AUS_democratic_ADJ:0 "Austrian"
+ AUS_communism:0 "People's Republic of Austria"
+ AUS_communism_DEF:0 "People's Republic of Austria"
+ AUS_communism_ADJ:0 "Austrian"
+ AUS_fascism:0 "Austrian Empire"
+ AUS_fascism_DEF:0 "Austrian Empire"
+ AUS_fascism_ADJ:0 "Austrian"
+ AUS_neutrality:0 "Austria"
+ AUS_neutrality_DEF:0 "Austria"
+ AUS_neutrality_ADJ:0 "Austrian"
+
+ POL_democratic:0 "Republic of Poland"
+ POL_democratic_DEF:0 "Republic of Poland"
+ POL_democratic_ADJ:0 "Polish"
+ POL_communism:0 "People's Republic of Poland"
+ POL_communism_DEF:0 "People's Republic of Poland"
+ POL_communism_ADJ:0 "Polish"
+ POL_fascism:0 "Polish Empire"
+ POL_fascism_DEF:0 "Polish Empire"
+ POL_fascism_ADJ:0 "Polish"
+ POL_neutrality:0 "Poland"
+ POL_neutrality_DEF:0 "Poland"
+ POL_neutrality_ADJ:0 "Polish"
+
+ GER_democratic:0 "Republic of Germany"
+ GER_democratic_DEF:0 "Republic of Germany"
+ GER_democratic_ADJ:0 "German"
+ GER_communism:0 "People's Republic of Germany"
+ GER_communism_DEF:0 "People's Republic of Germany"
+ GER_communism_ADJ:0 "German"
+ GER_fascism:0 "German Empire"
+ GER_fascism_DEF:0 "German Empire"
+ GER_fascism_ADJ:0 "German"
+ GER_neutrality:0 "Germany"
+ GER_neutrality_DEF:0 "Germany"
+ GER_neutrality_ADJ:0 "German"
+
+ SPA_democratic:0 "Republic of Spain"
+ SPA_democratic_DEF:0 "Republic of Spain"
+ SPA_democratic_ADJ:0 "Spanish"
+ SPA_communism:0 "People's Republic of Spain"
+ SPA_communism_DEF:0 "People's Republic of Spain"
+ SPA_communism_ADJ:0 "Spanish"
+ SPA_fascism:0 "Spanish Empire"
+ SPA_fascism_DEF:0 "Spanish Empire"
+ SPA_fascism_ADJ:0 "Spanish"
+ SPA_neutrality:0 "Spain"
+ SPA_neutrality_DEF:0 "Spain"
+ SPA_neutrality_ADJ:0 "Spanish"
+
+ ROM_democratic:0 "Republic of Rome"
+ ROM_democratic_DEF:0 "Republic of Rome"
+ ROM_democratic_ADJ:0 "Roman"
+ ROM_communism:0 "People's Republic of Rome"
+ ROM_communism_DEF:0 "People's Republic of Rome"
+ ROM_communism_ADJ:0 "Roman"
+ ROM_fascism:0 "Roman Empire"
+ ROM_fascism_DEF:0 "Roman Empire"
+ ROM_fascism_ADJ:0 "Roman"
+ ROM_neutrality:0 "Rome"
+ ROM_neutrality_DEF:0 "Rome"
+ ROM_neutrality_ADJ:0 "Roman"
+
+ TUR_democratic:0 "Republic of Turkey"
+ TUR_democratic_DEF:0 "Republic of Turkey"
+ TUR_democratic_ADJ:0 "Turkish"
+ TUR_communism:0 "People's Republic of Turkey"
+ TUR_communism_DEF:0 "People's Republic of Turkey"
+ TUR_communism_ADJ:0 "Turkish"
+ TUR_fascism:0 "Ottoman Empire"
+ TUR_fascism_DEF:0 "Ottoman Empire"
+ TUR_fascism_ADJ:0 "Turkish"
+ TUR_neutrality:0 "Turkey"
+ TUR_neutrality_DEF:0 "Turkey"
+ TUR_neutrality_ADJ:0 "Turkish"
+
+ IRQ_democratic:0 "Republic of Iraq"
+ IRQ_democratic_DEF:0 "Republic of Iraq"
+ IRQ_democratic_ADJ:0 "Iraqui"
+ IRQ_communism:0 "People's Republic of Iraq"
+ IRQ_communism_DEF:0 "People's Republic of Iraq"
+ IRQ_communism_ADJ:0 "Iraqui"
+ IRQ_fascism:0 "Iraqui Empire"
+ IRQ_fascism_DEF:0 "Iraqui Empire"
+ IRQ_fascism_ADJ:0 "Iraqui"
+ IRQ_neutrality:0 "Iraq"
+ IRQ_neutrality_DEF:0 "Iraq"
+ IRQ_neutrality_ADJ:0 "Iraqui"
+
+ UKR_democratic:0 "Republic of Ukraine"
+ UKR_democratic_DEF:0 "Republic of Ukraine"
+ UKR_democratic_ADJ:0 "Ukranian"
+ UKR_communism:0 "People's Republic of Ukraine"
+ UKR_communism_DEF:0 "People's Republic of Ukraine"
+ UKR_communism_ADJ:0 "Ukranian"
+ UKR_fascism:0 "Ukranian Empire"
+ UKR_fascism_DEF:0 "Ukranian Empire"
+ UKR_fascism_ADJ:0 "Ukranian"
+ UKR_neutrality:0 "Ukraine"
+ UKR_neutrality_DEF:0 "Ukraine"
+ UKR_neutrality_ADJ:0 "Ukranian"
+
+ RUS_democratic:0 "Republic of Russia"
+ RUS_democratic_DEF:0 "Republic of Russia"
+ RUS_democratic_ADJ:0 "Russian"
+ RUS_communism:0 "People's Republic of Russia"
+ RUS_communism_DEF:0 "People's Republic of Russia"
+ RUS_communism_ADJ:0 "Russian"
+ RUS_fascism:0 "Russian Empire"
+ RUS_fascism_DEF:0 "Russian Empire"
+ RUS_fascism_ADJ:0 "Russian"
+ RUS_neutrality:0 "Union of Russian States"
+ RUS_neutrality_DEF:0 "Union of Russian States"
+ RUS_neutrality_ADJ:0 "Russian"
+
